--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 kv_namespaces = [
-{ binding = "Nevata", id = "3a93972d553646808079d57773af265b" }
+{ binding = "namespace", id = "id" }
 ]
 compatibility_date = "2024-04-19"
